# smn

./: README.md  enunciado.txt
golang/: main.go
net/: Program.cs
node/: index.js
python/: interactive_weather_report.py  weather_report.py
rust/: Cargo.toml
rust/src/: main.rs  sample.json  sample3days.json
